# engramcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  REVIEWING.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  setup.cfg
.agent/skills/jarvis-audit/: SKILL.md
.agents/skills/engramcp-audit/: README.md  SKILL.md
.agents/skills/jarvis-audit/: README.md
.claude/commands/engramcp/: audit.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  general_question.md  improvement.md
.github/workflows/: checks.yml  ci.yml  scorecard.yml  security.yml
assets/: palette.md
docs/design/: confidence-engine.md  config-audit.md  consolidation-pipeline.md  entity-resolution.md  evaluation-scenarios.md  extraction.md  graph-store.md  layer-architecture.md  mcp-interface.md  observability.md  retrieval.md  working-memory.md
scripts/: calibrate_eval_thresholds.py
src/engramcp/: auth.py  authz.py  config.py  evaluation.py  observability.py  server.py
src/engramcp/audit/: __init__.py  schemas.py  store.py
src/engramcp/engine/: __init__.py  concepts.py  confidence.py  consolidation.py  demand.py  extraction.py  llm_adapters.py  prompt_builder.py  retrieval.py  schemas.py
src/engramcp/graph/: __init__.py  corrections.py  entity_resolution.py  schema.py  store.py  traceability.py
src/engramcp/memory/: __init__.py  schemas.py  store.py  working.py
src/engramcp/models/: __init__.py  agent.py  confidence.py  mcp.py  nodes.py  relations.py  schemas.py
tests/: conftest.py
tests/integration/: test_bounded_resource_usage.py  test_consolidation_pipeline_outputs.py  test_consolidation_trigger.py  test_e2e_real_llm_eval.py  test_end_to_end_consolidation_retrieval.py  test_end_to_end_corrections_audit.py  test_mcp_protocol.py  test_reliability_idempotency_concurrency.py  test_retrieval_performance.py  test_working_memory_mcp.py
tests/scenarios/: README.md  __init__.py  test_e2e_real_llm_eval.py  test_tier1_smoke_regression.py  test_tier2_corporate_timeline.py  test_tier2_corroboration_derivation.py  test_tier2_curated_regression.py  test_tier3_flight_logs_regression.py
tests/scenarios/fixtures/: ground_truth_tier2.json  (+6 more)
tests/unit/: conftest.py  test_audit.py  test_auth.py  test_authz.py  test_calibrate_eval_thresholds_script.py  test_concepts.py  test_confidence_engine.py  test_config.py  test_consolidation_pipeline.py  test_correct_memory_split.py  test_demand.py  test_entity_resolution.py  test_extraction.py  test_graph_store.py  test_ground_truth_verify_script.py  test_llm_adapters.py  test_mcp_interface.py  test_models.py  test_observability.py  test_retrieval.py  test_retrieval_demand_tracking.py  test_server_consolidation.py  test_source_traceability.py  test_working_memory.py
(+4 files in other folders)
