[project]
name = "engramcp"
description = "A biomimetic memory engine for LLMs, exposed via MCP."
authors = [
    { name = "Jeremy Chapeau", email = "jeremy.chapeau@gmail.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0,<3.0",
    "neo4j>=5.0,<7.0",
    "pydantic>=2.0,<3.0",
    "redis>=5.2,<8.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jychp/engramcp"
Download = "https://github.com/jychp/engramcp/releases"
"Bug Report" = "https://github.com/jychp/engramcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.0",
    "testcontainers>=4.0",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/engramcp/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit test suite (tests/unit)",
    "integration: integration test suite (tests/integration)",
    "scenario: scenario/evaluation suite (tests/scenarios)",
    "tier1: tier-1 synthetic scenario evaluations",
    "tier2: tier-2 curated semi-real scenario evaluations",
    "tier3: tier-3 real raw-data scenario evaluations",
    "real_llm: opt-in tests that call a real LLM provider and may incur costs",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = false
